Bugfix: hide horizontal overflow caused by animations

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -8,6 +8,7 @@ body {
   font-family: Apercu Light, Arial, Helvetica, sans-serif;
   color: #59534f;
   background: #fefaf8;
+  overflow-x: hidden;
 }
 
 *,
